[gd_scene load_steps=126 format=2]

[ext_resource path="res://Player/source/AudioPlayer.gd" type="Script" id=1]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_018.wav" type="AudioStream" id=2]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_015.wav" type="AudioStream" id=3]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_017.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_09.wav" type="AudioStream" id=5]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_016.wav" type="AudioStream" id=6]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_019.wav" type="AudioStream" id=7]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_014.wav" type="AudioStream" id=8]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_020.wav" type="AudioStream" id=9]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_010.wav" type="AudioStream" id=10]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_012.wav" type="AudioStream" id=11]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_022.wav" type="AudioStream" id=12]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_023.wav" type="AudioStream" id=13]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_011.wav" type="AudioStream" id=14]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_021.wav" type="AudioStream" id=15]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_013.wav" type="AudioStream" id=16]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_024.wav" type="AudioStream" id=17]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_01.wav" type="AudioStream" id=18]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_02.wav" type="AudioStream" id=19]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_03.wav" type="AudioStream" id=20]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_00.wav" type="AudioStream" id=21]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_04.wav" type="AudioStream" id=22]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_05.wav" type="AudioStream" id=23]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_06.wav" type="AudioStream" id=24]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_07.wav" type="AudioStream" id=25]
[ext_resource path="res://Player/assets/Audio/Wood_Steps/FLY_Wood_Step_08.wav" type="AudioStream" id=26]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_01.wav" type="AudioStream" id=27]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_02.wav" type="AudioStream" id=28]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_03.wav" type="AudioStream" id=29]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_04.wav" type="AudioStream" id=30]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_05.wav" type="AudioStream" id=31]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_010.wav" type="AudioStream" id=32]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_00.wav" type="AudioStream" id=33]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_06.wav" type="AudioStream" id=34]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_011.wav" type="AudioStream" id=35]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_012.wav" type="AudioStream" id=36]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_013.wav" type="AudioStream" id=37]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_07.wav" type="AudioStream" id=38]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_08.wav" type="AudioStream" id=39]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_09.wav" type="AudioStream" id=40]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_017.wav" type="AudioStream" id=41]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_018.wav" type="AudioStream" id=42]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_014.wav" type="AudioStream" id=43]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_015.wav" type="AudioStream" id=44]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_016.wav" type="AudioStream" id=45]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_015.wav" type="AudioStream" id=46]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_016.wav" type="AudioStream" id=47]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_018.wav" type="AudioStream" id=48]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_019.wav" type="AudioStream" id=49]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_020.wav" type="AudioStream" id=50]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_028.wav" type="AudioStream" id=51]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_021.wav" type="AudioStream" id=52]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_022.wav" type="AudioStream" id=53]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_017.wav" type="AudioStream" id=54]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_03.wav" type="AudioStream" id=55]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_029.wav" type="AudioStream" id=56]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_010.wav" type="AudioStream" id=57]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_020.wav" type="AudioStream" id=58]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_05.wav" type="AudioStream" id=59]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_09.wav" type="AudioStream" id=60]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_012.wav" type="AudioStream" id=61]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_019.wav" type="AudioStream" id=62]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_025.wav" type="AudioStream" id=63]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_026.wav" type="AudioStream" id=64]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_027.wav" type="AudioStream" id=65]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_00.wav" type="AudioStream" id=66]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_06.wav" type="AudioStream" id=67]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_023.wav" type="AudioStream" id=68]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_030.wav" type="AudioStream" id=69]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_022.wav" type="AudioStream" id=70]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_01.wav" type="AudioStream" id=71]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_024.wav" type="AudioStream" id=72]
[ext_resource path="res://Player/assets/Audio/Rock_Steps/FLY_Rock_Step_021.wav" type="AudioStream" id=73]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_07.wav" type="AudioStream" id=74]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_02.wav" type="AudioStream" id=75]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_08.wav" type="AudioStream" id=76]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_04.wav" type="AudioStream" id=77]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_011.wav" type="AudioStream" id=78]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_013.wav" type="AudioStream" id=79]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_014.wav" type="AudioStream" id=80]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_024.wav" type="AudioStream" id=81]
[ext_resource path="res://Player/assets/Audio/Gravel_Steps/FLY_Gravel_Step_023.wav" type="AudioStream" id=82]
[ext_resource path="res://Player/assets/Audio/Jump_Grunts/VO_Jump_Grunt_03.wav" type="AudioStream" id=83]
[ext_resource path="res://Player/assets/Audio/Jump_Rock/FLY_Rock_Jump_05.wav" type="AudioStream" id=84]
[ext_resource path="res://Player/assets/Audio/Fall_Gravel/SFX_Gravel_Body_Fall_01.wav" type="AudioStream" id=85]
[ext_resource path="res://Player/assets/Audio/Fall_Rock/SFX_Rock_Body_Fall_01.wav" type="AudioStream" id=86]
[ext_resource path="res://Player/assets/Audio/Jump_Grunts/VO_Jump_Grunt_01.wav" type="AudioStream" id=87]
[ext_resource path="res://Player/assets/Audio/Fall_Gravel/SFX_Gravel_Body_Fall_00.wav" type="AudioStream" id=88]
[ext_resource path="res://Player/assets/Audio/Jump_Wood/FLY_Wood_Jump_03.wav" type="AudioStream" id=89]
[ext_resource path="res://Player/assets/Audio/Fall_Wood/SFX_Wood_Body_Fall_00.wav" type="AudioStream" id=90]
[ext_resource path="res://Player/assets/Audio/Jump_Rock/FLY_Rock_Jump_07.wav" type="AudioStream" id=91]
[ext_resource path="res://Player/assets/Audio/Jump_Rock/FLY_Rock_Jump_06.wav" type="AudioStream" id=92]
[ext_resource path="res://Player/assets/Audio/Jump_Wood/FLY_Wood_Jump_02.wav" type="AudioStream" id=93]
[ext_resource path="res://Player/assets/Audio/Jump_Rock/FLY_Rock_Jump_01.wav" type="AudioStream" id=94]
[ext_resource path="res://Player/assets/Audio/Jump_Rock/FLY_Rock_Jump_03.wav" type="AudioStream" id=95]
[ext_resource path="res://Player/assets/Audio/Jump_Wood/FLY_Wood_Jump_04.wav" type="AudioStream" id=96]
[ext_resource path="res://Player/assets/Audio/Jump_Rock/FLY_Rock_Jump_04.wav" type="AudioStream" id=97]
[ext_resource path="res://Player/assets/Audio/Jump_Wood/FLY_Wood_Jump_00.wav" type="AudioStream" id=98]
[ext_resource path="res://Player/assets/Audio/Fall_Wood/SFX_Wood_Body_Fall_01.wav" type="AudioStream" id=99]
[ext_resource path="res://Player/assets/Audio/Jump_Wood/FLY_Wood_Jump_01.wav" type="AudioStream" id=100]
[ext_resource path="res://Player/assets/Audio/Fall_Rock/SFX_Rock_Body_Fall_00.wav" type="AudioStream" id=101]
[ext_resource path="res://Player/assets/Audio/Jump_Grunts/VO_Jump_Grunt_02.wav" type="AudioStream" id=102]
[ext_resource path="res://Player/assets/Audio/Jump_Grunts/VO_Jump_Grunt_04.wav" type="AudioStream" id=103]
[ext_resource path="res://Player/assets/Audio/Jump_Rock/FLY_Rock_Jump_02.wav" type="AudioStream" id=104]
[ext_resource path="res://Player/assets/Audio/Jump_Rock/FLY_Rock_Jump_00.wav" type="AudioStream" id=105]
[ext_resource path="res://Player/assets/Audio/Jump_Grunts/VO_Jump_Grunt_00.wav" type="AudioStream" id=106]
[ext_resource path="res://Player/assets/Audio/Sword_Swings/SFX_Sword_Swinging.wav" type="AudioStream" id=107]
[ext_resource path="res://Player/assets/Audio/Pain_Grunts/VO_Pain_00.wav" type="AudioStream" id=108]
[ext_resource path="res://Player/assets/Audio/Sword_Swings/SFX_Weapon_Swing_00.wav" type="AudioStream" id=109]
[ext_resource path="res://Player/assets/Audio/Sword_Swings/SFX_Weapon_Swing_01.wav" type="AudioStream" id=110]
[ext_resource path="res://Player/assets/Audio/Pain_Grunts/VO_Pain_01.wav" type="AudioStream" id=111]
[ext_resource path="res://Player/assets/Audio/Pain_Grunts/VO_Pain_02.wav" type="AudioStream" id=112]
[ext_resource path="res://Player/assets/Audio/Death/VO_Death_01.wav" type="AudioStream" id=113]
[ext_resource path="res://Player/assets/Audio/Death/VO_Death_00.wav" type="AudioStream" id=114]
[ext_resource path="res://Player/assets/Audio/Death/VO_Death_02.wav" type="AudioStream" id=115]
[ext_resource path="res://Player/assets/Audio/Death/VO_Death_03.wav" type="AudioStream" id=116]
[ext_resource path="res://Player/assets/Audio/Spawn/SFX_Respawn_00.wav" type="AudioStream" id=117]
[ext_resource path="res://UI/UI_Error_00.wav" type="AudioStream" id=118]
[ext_resource path="res://Player/assets/Audio/Shield/SFX_Shield_Bounce.wav" type="AudioStream" id=119]
[ext_resource path="res://Player/assets/Audio/Shield/SFX_Sheath_01.wav" type="AudioStream" id=120]
[ext_resource path="res://Player/assets/Audio/Shield/SFX_Unsheath_01.wav" type="AudioStream" id=121]
[ext_resource path="res://Player/assets/Audio/Shield/SFX_Unsheath_02.wav" type="AudioStream" id=122]
[ext_resource path="res://Player/assets/Audio/Shield/SFX_Unsheath_00.wav" type="AudioStream" id=123]
[ext_resource path="res://Player/assets/Audio/Shield/SFX_Sheath_00.wav" type="AudioStream" id=124]

[sub_resource type="RayShape2D" id=1]

[node name="AudioPlayer" type="Node2D"]
script = ExtResource( 1 )
wood_foot_steps = [ ExtResource( 21 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 17 ) ]
rock_foot_steps = [ ExtResource( 33 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 34 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 62 ), ExtResource( 58 ), ExtResource( 73 ), ExtResource( 70 ), ExtResource( 68 ), ExtResource( 72 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 51 ), ExtResource( 56 ), ExtResource( 69 ) ]
gravel_foot_steps = [ ExtResource( 66 ), ExtResource( 71 ), ExtResource( 75 ), ExtResource( 55 ), ExtResource( 77 ), ExtResource( 59 ), ExtResource( 67 ), ExtResource( 74 ), ExtResource( 76 ), ExtResource( 60 ), ExtResource( 57 ), ExtResource( 78 ), ExtResource( 61 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 54 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 82 ), ExtResource( 81 ) ]
jump_grunts = [ ExtResource( 106 ), ExtResource( 87 ), ExtResource( 102 ), ExtResource( 83 ), ExtResource( 103 ) ]
wood_jumps = [ ExtResource( 98 ), ExtResource( 100 ), ExtResource( 93 ), ExtResource( 89 ), ExtResource( 96 ) ]
rock_jumps = [ ExtResource( 105 ), ExtResource( 94 ), ExtResource( 104 ), ExtResource( 95 ), ExtResource( 97 ), ExtResource( 84 ), ExtResource( 92 ), ExtResource( 91 ) ]
gravel_jumps = [ ExtResource( 106 ), ExtResource( 87 ), ExtResource( 102 ), ExtResource( 83 ), ExtResource( 103 ) ]
wood_falls = [ ExtResource( 90 ), ExtResource( 99 ) ]
rock_falls = [ ExtResource( 101 ), ExtResource( 86 ) ]
gravel_falls = [ ExtResource( 88 ), ExtResource( 85 ) ]
sword_swings = [ ExtResource( 107 ), ExtResource( 109 ), ExtResource( 110 ) ]
pain_grunts = [ ExtResource( 108 ), ExtResource( 111 ), ExtResource( 112 ) ]
death_sounds = [ ExtResource( 114 ), ExtResource( 113 ), ExtResource( 115 ), ExtResource( 116 ) ]
sheath_sounds = [ ExtResource( 124 ), ExtResource( 120 ) ]
unsheath_sounds = [ ExtResource( 123 ), ExtResource( 121 ), ExtResource( 122 ) ]

[node name="SurfaceDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="SurfaceDetector"]
shape = SubResource( 1 )

[node name="FootSteps" type="AudioStreamPlayer2D" parent="."]
bus = "Effects"

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
bus = "Effects"

[node name="JumpGrunt" type="AudioStreamPlayer2D" parent="."]
bus = "Effects"

[node name="Fall" type="AudioStreamPlayer2D" parent="."]
bus = "Effects"

[node name="Swing" type="AudioStreamPlayer2D" parent="."]
bus = "Effects"

[node name="Pain" type="AudioStreamPlayer2D" parent="."]
bus = "Effects"

[node name="Death" type="AudioStreamPlayer2D" parent="."]
bus = "Effects"

[node name="Spawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 117 )
volume_db = -10.0
bus = "Effects"

[node name="ShieldUnsheath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 123 )
volume_db = 5.0
bus = "Effects"

[node name="ShieldSheath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 124 )
volume_db = 5.0
bus = "Effects"

[node name="ShieldHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 119 )
volume_db = -5.0
bus = "Effects"

[node name="ShieldError" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 118 )
volume_db = -10.0
bus = "Effects"
